--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/preset-env": "7.21.4",
     "@babel/preset-react": "7.18.6",
+    "@reduxjs/toolkit": "^1.9.5",
     "deep-freeze": "0.0.1",
     "eslint-plugin-jest": "27.2.1",
     "jest": "29.5.0",
