--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "server": "json-server -p5174 --watch db.json"
   },
   "dependencies": {
     "@babel/preset-env": "7.21.4",
     "@babel/preset-react": "7.18.6",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.0",
     "deep-freeze": "0.0.1",
     "eslint-plugin-jest": "27.2.1",
     "jest": "29.5.0",
@@ -30,6 +32,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "json-server": "^0.17.3",
     "vite": "^4.4.5"
   }
 }
