--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
   "dependencies": {
     "@babel/preset-env": "7.21.4",
     "@babel/preset-react": "7.18.6",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.33.0",
     "axios": "^1.5.0",
     "deep-freeze": "0.0.1",
     "eslint-plugin-jest": "27.2.1",
     "jest": "29.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.1.2",
-    "redux": "^4.2.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
