--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest",
-    "server": "json-server -p5174 --watch db.json"
+    "test": "jest"
   },
   "dependencies": {
     "@babel/preset-env": "7.21.4",
     "@babel/preset-react": "7.18.6",
-    "@tanstack/react-query": "^4.33.0",
     "axios": "^1.5.0",
     "deep-freeze": "0.0.1",
     "eslint-plugin-jest": "27.2.1",
@@ -30,7 +28,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "json-server": "^0.17.3",
     "vite": "^4.4.5"
   }
 }
